--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body{
 #content {
 	display:flex;
 	max-width: 1100px;
-	height: 350px;
+	height: 400px;
 	margin: 0 auto;
 	flex-direction: column;
 	padding: 50px;
@@ -26,7 +26,7 @@ body{
 
 #seletores{
 	display:flex;
-	
+	margin-top: 20px;
 	justify-content: center;
 	align-items: center;
 	flex-direction: row;
